# geompp

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  WIP.md  line.wkt  line_segment.wkt  point.wkt  ray.wkt  vector.wkt
.github/workflows/: build_test_linux.yml  build_test_windows.yml
docker/: Dockerfile.lin  Dockerfile.win  README.md  build.bat  build.sh  run.bat  run.sh
geom_viewer/: CMakeLists.txt  main.cpp
geom_viewer/include/: lsv_parser.hpp
geom_viewer/res/: initial_geometries.lsv
geom_viewer/src/: lsv_parser.cpp
geomcpp/: CMakeLists.txt
geomcpp/include/: point2d.hpp  vector2d.hpp
geomcpp/src/: point2d.cpp  vector2d.cpp
geompp/: CMakeLists.txt
geompp/include/: constants.hpp  line2d.hpp  line_segment2d.hpp  point2d.hpp  polygon2d.hpp  polyline2d.hpp  ray2d.hpp  triangle2d.hpp  utils.hpp  vector2d.hpp
geompp/src/: line2d.cpp  line_segment2d.cpp  point2d.cpp  polygon2d.cpp  polyline2d.cpp  ray2d.cpp  triangle2d.cpp  utils.cpp  vector2d.cpp
geompp_tests/: .gitattributes  .gitignore  CMakeLists.txt  main.cpp  test_main.cpp
geompp_tests/res/line2d/: line.wkt
geompp_tests/res/line_segment2d/: line_segment.wkt
geompp_tests/res/point2d/: point.wkt
geompp_tests/res/polyline2d/: polyline.wkt
geompp_tests/res/ray2d/: ray.wkt
geompp_tests/res/triangle2d/: triangle.wkt
geompp_tests/res/vector2d/: vector.wkt
geompp_tests/src/: test_line2d.cpp  test_line_segment2d.cpp  test_point2d.cpp  test_polyline2d.cpp  test_ray2d.cpp  test_triangle2d.cpp  test_vector2d.cpp
